# serverless-todo

./: Pipfile
todo-back-end/: README.md  samconfig.toml  template.yaml
todo-back-end/src/todo_get/: handler.py
todo-back-end/src/todo_post/: handler.py
todo-backend/: pyproject.toml
todo-backend/todo-backend/: README.md  samconfig.toml  template.yaml
todo-backend/todo-backend/.aws-sam/: build.toml
todo-backend/todo-backend/.aws-sam/cache/47aa3caa-4dce-4c53-934d-814776797e85/: handler.py
todo-backend/todo-backend/.aws-sam/cache/6b6ad0c0-e93b-4250-8608-cd0e5e988616/: handler.py  requirements.txt
todo-backend/todo-backend/.aws-sam/cache/6b6ad0c0-e93b-4250-8608-cd0e5e988616/PyMySQL-1.0.2.dist-info/: RECORD
todo-backend/todo-backend/layers/data_base/: Makefile  db_controller.py  todo_table_model.py
todo-backend/todo-backend/layers/requirements_layer/: requirements.txt
todo-backend/todo-backend/layers/utils_layer/: Makefile  cors_headers.py  request.py
todo-backend/todo-backend/src/cors/: preflight_response.py
todo-backend/todo-backend/src/todo_get/: handler.py
todo-backend/todo-backend/src/todo_id_delete/: handler.py
todo-backend/todo-backend/src/todo_id_get/: handler.py
todo-backend/todo-backend/src/todo_id_pach/: handler.py
todo-backend/todo-backend/src/todo_post/: handler.py
