[tool.poetry]
name = "sam-todo-backend"
version = "0.1.0"
description = ""
authors = ["Matias G"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
aws-lambda-powertools = {extras = ["pydantic"], version = "^1.14.0"}

[tool.poetry.dev-dependencies]
aws-sam-cli = "^1.21.1"
awscli = "^1.19.45"
cfn-lint = "^0.48.1"
yamllint = "^1.26.0"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''

(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
    | \.aws-sam
  )/
)
'''
